<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ca_blue"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/default_font"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_create_if_no_account"
            android:textColor="@color/ca_ivoiry"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_background_ivoiry_rounded_top"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/default_font"
                android:text="@string/login_screen_title"
                android:textColor="@color/ca_blue"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/default_font"
                android:hint="@string/generic_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/ca_blue"
                android:textColorHint="@color/ca_grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/default_font"
                android:hint="@string/generic_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/ca_blue"
                android:textColorHint="@color/ca_grey"
                android:textSize="16sp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/buttonLoginConnect"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_button_background_orange"
                android:fontFamily="@font/default_font"
                android:text="@string/login_login"
                android:textColor="@color/ca_ivoiry"
                app:finalCornerAngle="8dp"
                app:initialCornerAngle="8dp"
                app:spinning_bar_color="@color/ca_ivoiry"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>